--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name's Personal Site</title>
+    <title>Jaggar</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
