Update to free our js so librejs doesn't block our site

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jaggar</title>
+    <link rel="jslicense" href="/jslicenses.html" />
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -12,5 +13,5 @@
     </div>
 
     <script src="/js/main.js" type="text/javascript"></script>
-  </body>
+    </body>
 </html>
